--- a/demo/Gemfile
+++ b/demo/Gemfile
@@ -22,7 +22,11 @@ end
 
 gem 'jquery-rails'
 
-gem 'pry', '0.9.8.2'
+gem 'pry',                      '0.9.8.2'
+
+gem "will_paginate",            '3.0.3'
+
+gem 'showbuilder',              '0.0.6'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
